# backend/swagger.yaml
@@ -171,6 +171,53 @@ paths:
             description: error
             schema:
               $ref: "#/definitions/error"
+    delete:
+      summary: Deletes a chat.
+      operationId: "DeleteChat"
+      description: This endpoint deletes a chat.
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Chat information
+          required: true
+          schema:
+            type: object
+            required:
+              - chatId
+            properties:
+              chatId:
+                type: string
+                description: The chat ID.
+      responses:
+        '200':
+          description: Successful response
+          schema:
+            type: object
+            properties:
+              chat:
+                type: object
+                $ref: '#/definitions/Chat'
+                description: The deleted chat.
+        400:
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/error"
+        '401':
+          description: unauthorized
+          schema:
+            $ref: "#/definitions/error"
+        500:
+          description: "Internal server error"
+          schema:
+            $ref: "#/definitions/error"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
   /chat_messages/{chatId}:
     get:
       description: "Get chat messages"
